feat: update Docker configuration and Nginx setup for frontend application

--- a/lead-import-visualizer/index.html
+++ b/lead-import-visualizer/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
+  
+  <meta name="robots" content="noindex, nofollow" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Catarinense Soluções Financeiras</title>
-  <meta name="description" content="Lovable Generated Project" />
+
+  <title>Catarinense Leads · Ferramenta Interna</title>
+  <meta name="description" content="Ferramenta interna para importação e gestão de leads." />
   <meta name="author" content="Catarinense Soluções Financeiras" />
 
-  <meta property="og:title" content="Catarinense Soluções Financeiras" />
-  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:title" content="Catarinense Leads" />
+  <meta property="og:description" content="Ferramenta interna de gestão de leads." />
   <meta property="og:type" content="website" />
- 
-<link rel="icon" type="image/png" sizes="32x32" href="./public/catarinenseicon.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <link rel="icon" type="image/png" href="catarinenseicon.png" />
+  <link rel="apple-touch-icon" href="catarinenseicon.png" />
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
+  <noscript>
+    <strong>Para utilizar esta aplicação, é necessário ativar o JavaScript no seu navegador.</strong>
+  </noscript>
 
+  <div id="root"></div>
+
+  <script type="module" src="src/main.tsx"></script>
+</body>
 </html>
