--- a/lead-import-visualizer/index.html
+++ b/lead-import-visualizer/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8" />
   
-  <meta name="robots" content="noindex, nofollow" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -11,9 +10,20 @@
   <meta name="description" content="Ferramenta interna para importação e gestão de leads." />
   <meta name="author" content="Catarinense Soluções Financeiras" />
 
+ 
   <meta property="og:title" content="Catarinense Leads" />
-  <meta property="og:description" content="Ferramenta interna de gestão de leads." />
+  <meta property="og:description" content="Ferramenta interna para importação e gestão de leads." />
   <meta property="og:type" content="website" />
+  
+  <meta property="og:url" content="https://app.catarinensecredito.com.br" />
+  
+  <meta property="og:site_name" content="Catarinense Leads" />
+
+  <meta property="og:image" content="https://app.catarinensecredito.com.br/previewcatarinense.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/png" />
+
 
   <link rel="icon" type="image/png" href="catarinenseicon.png" />
   <link rel="apple-touch-icon" href="catarinenseicon.png" />
